<resources>
    <string name="app_name">Propertio Developer</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="greeting_text">Halo Developer</string>
    <string name="register_title_caption">Segera Bergabung</string>
    <string name="first_name">Nama Depan</string>
    <string name="first_name_hint">Masukkan Nama Depan Anda</string>
    <string name="last_name">Nama Belakang</string>
    <string name="last_name_hint">Masukkan Nama Belakang Anda</string>
    <string name="email">Email</string>
    <string name="email_hint">Masukkan Email Anda</string>
    <string name="telephone_number">Nomor Telepon</string>
    <string name="telephone_number_hint">8123456789</string>
    <string name="password">Kata Sandi</string>
    <string name="password_hint">Buat Kata Sandi Anda</string>
    <string name="password_confirmation">Konfirmasi Kata Sandi</string>
    <string name="password_confirmation_hint">Konfirmasi Kata Sandi Anda</string>
    <string name="province">Provinsi</string>
    <string name="city">Kota</string>
    <string name="address">Alamat</string>
    <string name="add_profile_picture">Tambahkan Foto Profil</string>
    <string name="add">Tambahkan</string>
    <string name="register_text">Bergabung Sekarang</string>
    <string name="question_to_login">Sudah Bergabung?</string>
    <string name="link_to_login_text">Masuk Sekarang?</string>
    <string name="login_title_caption">Selamat Datang Kembali</string>
    <string name="forget_password_caption">Tidak dapat mengingat kata sandi anda?</string>
    <string name="forget_password_link_text">Klik Disini</string>
    <string name="create_account_caption">Belum memiliki akun?</string>
    <string name="create_account_link_text">Daftar Sekarang</string>
    <string name="logout_link_text"><u>Keluar</u></string>
    <string-array name="list_of_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Mei</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Agu</item>
        <item>Sep</item>
        <item>Okt</item>
        <item>Nov</item>
        <item>Des</item>
    </string-array>
    <string-array name="list_of_numerical_unit">
        <item>Ribu</item>
        <item>Juta</item>
        <item>Miliar</item>
        <item>Triliun</item>
    </string-array>
    <string-array name="list_of_provinces">
        <item>Aceh</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Barat</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumatera Selatan</item>
        <item>Bengkulu</item>
        <item>Lampung</item>
        <item>Kepulauan Bangka Belitung</item>
        <item>Kepulauan Riau</item>
        <item>DKI Jakarta</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>DI Yogyakarta</item>
        <item>Jawa Timur</item>
        <item>Banten</item>
        <item>Bali</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Gorontalo</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Sulawesi Barat</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Papua Barat</item>
        <item>Papua</item>
    </string-array>
    <string-array name="list_of_districts_jawatengah">
        <item>Semarang</item>
        <item>Surakarta</item>
        <item>Magelang</item>
        <item>Wonosobo</item>
        <item>Boyolali</item>
        <item>Klaten</item>
        <item>Sragen</item>
        <item>Karanganyar</item>
        <item>Sukoharjo</item>
        <item>Rembang</item>
        <item>Blora</item>
        <item>Pati</item>
        <item>Kudus</item>
        <item>Jepara</item>
        <item>Demak</item>
        <item>Temanggung</item>
        <item>Kendal</item>
        <item>Batang</item>
        <item>Pekalongan</item>
        <item>Tegal</item>
    </string-array>
    <string-array name="list_of_districts_jawabarat">
        <item>Bandung</item>
        <item>Bekasi</item>
        <item>Bogor</item>
        <item>Ciamis</item>
        <item>Cianjur</item>
        <item>Cirebon</item>
        <item>Garut</item>
        <item>Indramayu</item>
        <item>Karawang</item>
        <item>Kuningan</item>
        <item>Majalengka</item>
        <item>Purwakarta</item>
        <item>Subang</item>
        <item>Sukabumi</item>
        <item>Sumedang</item>
        <item>Tasikmalaya</item>
    </string-array>
    <string-array name="list_of_districts_dki">
        <item>Jakarta Barat</item>
        <item>Jakarta Pusat</item>
        <item>Jakarta Selatan</item>
        <item>Jakarta Timur</item>
        <item>Jakarta Utara</item>
    </string-array>
</resources>