<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp">



            <include
                layout="@layout/propertio_logo_icon_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/greeting_text"
                android:layout_marginTop="5dp"
                style="@style/title.large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:text="@string/register_title_caption"
                style="@style/title.medium"/>


            <!-- Start: Formulir Registrasi   -->

            <LinearLayout
                android:id="@+id/container_input_nama_depan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    style="@style/paragraph"/>

                <EditText
                    android:id="@+id/edit_text_nama_depan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingHorizontal="14.5dp"
                    android:maxLines="1"
                    android:hint="@string/first_name_hint"
                    android:textColorHint="@color/text_black_placeholder"
                    android:textColor="@color/text_black"
                    style="@style/paragraph"
                    android:inputType="textPersonName"
                    android:background="@drawable/edit_text_rounded_rectangle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_input_nama_belakang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    style="@style/paragraph"/>

                <EditText
                    android:id="@+id/edit_text_nama_belakang"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingHorizontal="14.5dp"
                    android:maxLines="1"
                    android:hint="@string/last_name_hint"
                    android:textColorHint="@color/text_black_placeholder"
                    android:textColor="@color/text_black"
                    style="@style/paragraph"
                    android:inputType="textPersonName"
                    android:background="@drawable/edit_text_rounded_rectangle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    style="@style/paragraph"/>

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingHorizontal="14.5dp"
                    android:maxLines="1"
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/text_black_placeholder"
                    android:textColor="@color/text_black"
                    style="@style/paragraph"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_text_rounded_rectangle"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_input_nomor_telepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone_number"
                    style="@style/paragraph"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/edit_text_rounded_rectangle">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/spinner_nomor_telepon_prefix"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="🇮🇩 ID"
                        android:drawableEnd="@drawable/chevron_down"
                        android:background="@android:color/transparent"
                        android:paddingHorizontal="14.5dp"
                        style="@style/paragraph"/>

                    <TextView
                        android:id="@+id/text_view_nomor_telepon_prefix"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="+62"
                        android:layout_marginRight="5dp"
                        android:maxLines="1"
                        android:textColor="@color/text_black"
                        android:textAppearance="@style/paragraph"
                        />

                    <EditText
                        android:id="@+id/edit_text_nomor_telepon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="14.5dp"
                        android:layout_weight="4"
                        android:maxLines="1"
                        android:hint="@string/telephone_number_hint"
                        android:textColorHint="@color/text_black_placeholder"
                        android:textColor="@color/text_black"
                        style="@style/paragraph"
                        android:inputType="phone"
                        android:background="@android:color/transparent"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    style="@style/paragraph"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="14.5dp"
                        android:maxLines="1"
                        android:hint="@string/password_hint"
                        android:textColorHint="@color/text_black_placeholder"
                        android:textColor="@color/text_black"
                        style="@style/paragraph"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_text_rounded_rectangle"/>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_input_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_confirmation"
                    style="@style/paragraph"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_password_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="14.5dp"
                        android:maxLines="1"
                        android:hint="@string/password_confirmation_hint"
                        android:textColorHint="@color/text_black_placeholder"
                        android:textColor="@color/text_black"
                        style="@style/paragraph"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_text_rounded_rectangle"/>


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_input_provinsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/province"
                    style="@style/paragraph"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_provinces_selection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingHorizontal="14.5dp"
                    android:textColor="@color/text_black"
                    android:textAppearance="@style/paragraph"
                    android:textAlignment="textStart"
                    android:text="-- Pilih Provinsi"
                    android:drawableEnd="@drawable/chevron_down"
                    android:background="@drawable/edit_text_rounded_rectangle"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_input_kota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    style="@style/paragraph"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/spinner_district"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingHorizontal="14.5dp"
                    android:textColor="@color/text_black"
                    android:textAppearance="@style/paragraph"
                    android:textAlignment="textStart"
                    android:text="-- Pilih Kota"
                    android:drawableEnd="@drawable/chevron_down"
                    android:background="@drawable/edit_text_rounded_rectangle"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_input_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    style="@style/paragraph"/>

                <EditText
                    android:id="@+id/edit_text_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="14.5dp"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/text_black_placeholder"
                    android:textColor="@color/text_black"
                    style="@style/paragraph"
                    android:inputType="textMultiLine"
                    android:layout_gravity="top"
                    android:background="@drawable/edit_text_rounded_rectangle"/>

            </LinearLayout>

            <TextView
                style="@style/paragraph"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_profile_picture" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_tambah_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:visibility="visible"
                android:text="@string/add"
                style="@style/button.add"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_registrasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible"
                android:text="@string/register_text"
                style="@style/button.primary.l"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="100dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_to_login"
                    style="@style/paragraph.small"/>
                <TextView
                    android:id="@+id/link_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_to_login_text"
                    android:textColor="@color/blue_600"
                    style="@style/paragraph.small"/>

            </LinearLayout>



            <!-- End: Formulir Registrasi   -->


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>